Test_Project/GKE/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-node-port-service
  labels:
    k8s-app: glbc
    kubernetes.io/name: "GLBCDefaultBackend"
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    app: k8s-net-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31001
  type: NodePort
