Test_Project/GKE/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-service
spec:
  selector:
    app: k8s-net-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
  type: LoadBalancer
